namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-find-and-refer-an-intervention-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-find-and-refer-an-intervention-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "refer-intervention-alpha"
    cloud-platform.justice.gov.uk/application: "Find and Refer an Intervention"
    cloud-platform.justice.gov.uk/owner: "Find and Refer an Intervention: interventions-devs@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-find-and-refer-an-intervention-ui"
    cloud-platform.justice.gov.uk/team-name: "interventions-devs"
